# dotfiles

./: .gitignore  README.md  TODO.md  bootstrap.sh  dotfiles  pkglist.txt  pkglist_tp.txt  update_instaled_pkgs.sh
dotfiles_py/: pyproject.toml
dotfiles_py/dotfiles/: bb_parser.py  component.py  deps.py  dotfiles.py  links.py  scripts.py  utils.py
dotfiles_py/tests/: test_bb_parser.py
git/: .gitconfig  db.json
helper_scripts/: auto_cat  install_helper_scripts.sh
installed_pkgs/: woelke-TP  woelke-cirrus7  woelke-server
linux_programmes/: linux_easy_install.py  linux_programmes.sh  program_list.json
linux_programs/: app_handler.py  linux_easy_install.py  linux_programs.sh  program_list.json
miscellaneous/: .Xresources  miscellaneous.sh
miscellaneous/scripts/: alarm  execute_me  firefox_tunnel_to  git_config  runtime
miscellaneous/scripts/nautilus/: merge_pdf
nvim_config/: init.vim  plugins.vim
programming_lang/python/: db.json
sec/: sec.tar.gz.gpg  sec.tgz.gpg
system/: db.json
tools/: config.json  db.json
ubuntu/: README.md  ubuntu.sh
vim/: .gdbinit  .pyclewn_keys.gdb  .vim_bundles.vim  .vimrc  .vimrc_init  coc-settings.json  db.json  install_neovim.sh  install_nvim.sh  install_plugins.sh  install_vim.sh
vim/nvim_config/: coc-settings.json  coc.lua  coc.vim  ginit.vim  init.lua  init.vim  install_rc.lua  install_rc.vim  plugins.lua  plugins.vim  rc.lua  rc.vim  sec.vim  tmp.vim
vim/old/: astyle.sh  buildclang-sh
vim/template/: Makefile_latex  Makefile_ninja
yay/: db.json
zsh/: .zshrc  db.json  install_zsh.sh
(+5 files in other folders)
