[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfile"
version = "1"

[tool.setuptools.packages.find]
where = ["dotfiles"]
namespaces = true

[project.scripts]
dotfiles = "dotfiles:main"

[tool.autopep8]
max_line_length = 120
indent-size = 4

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "invalid-name"
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.IMPORTS]
allow-wildcard-with-all = true
